--- a/appspec.yml
+++ b/appspec.yml
@@ -5,17 +5,17 @@ files:
     destination: /var/www/html/website
 hooks:
   BeforeInstall:
-    - location: scripts/install_dependencies
+    - location: /scripts/install_dependencies
       timeout: 300
       runas: root
-    - location: scripts/start_server
+    - location: /scripts/start_server
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/afterInstall
+    - location: /scripts/afterInstall
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_server
+    - location: /scripts/stop_server
       timeout: 300
       runas: root
